syntax = "proto3";

option csharp_namespace = "EthereumTransferGrpc";

package wallets;


service WalletProtoService {
  //create wallet
  rpc CreateWallet(CreateUserWalletRequest) returns (CreateUserWalletResponse);
  //load wallet
  rpc LoadWallet(LoadUserWalletRequest) returns (LoadUserWalletResponse);
  //transfer cryptocurrency from sender wallet to recipient wallet
  rpc Transfer(CryptoTransferRequest) returns (CryptoTransferResponse);
}

//creating wallet message
message CreateUserWalletRequest {
  //User password
  string password = 1;
  //Email username
  string email = 2;
}
//created wallet with address and private key response
message CreateUserWalletResponse {
  //account id
  string id = 1;
  //account address
  string address = 2;
  //wallet private key
  string privateKey = 3;
}
//loading wallet message
message LoadUserWalletRequest {
  //load wallet for user by id
  string id = 1;
}
//loading wallet response
message LoadUserWalletResponse {
  //wallet balance
  double balance = 1;
  //account address
  string address = 2;
  //wallet private key
  string privateKey = 3;
}

//transfer cryptocurrency to recipient address request
message CryptoTransferRequest {
  //address of cryptocurrency sender
  string sender_address = 1;
  //address of cryptocurrency recipient
  string recipient_address = 2;
  //amount of cryptocurrency to be transferred to recipient
  double crypto_amount = 3;
}

//transfer cryptocurrency to recipient address response
message CryptoTransferResponse {
  string recipient_address = 1;
  double transferred_crypto_amount = 2;
}